[package]
authors = ['TraceLabs']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'glitch-node'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
jsonrpc-core = "15.1.0"
jsonrpc-pubsub = "15.1.0"
ethereum-types = "0.11.0"
serde_json = "1"

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

sp-api = '3.0.0'
sp-blockchain = '3.0.0'
sc-rpc-api = '0.9.0'
sc-rpc = '3.0.0'
substrate-frame-rpc-system = '3.0.0'
pallet-transaction-payment-rpc = '3.0.0'
sc-cli = '0.9.0'
sp-core = '3.0.0'
sc-executor = '0.9.0'
sc-service = '0.9.0'
sp-inherents = '3.0.0'
sc-transaction-pool = '3.0.0'
sp-transaction-pool = '3.0.0'
sc-network = '0.9.0'
sc-consensus-aura = '0.9.0'
sp-consensus-aura = '0.9.0'
sc-consensus-manual-seal = '0.9.0'
sp-consensus = '0.9.0'
sc-consensus = '0.9.0'
sp-timestamp = '3.0.0'
sp-io = '3.0.0'
sp-storage = '3.0.0'
pallet-evm = '3.0.0'
pallet-ethereum = '1.0.0'
sc-finality-grandpa = '0.9.0'
sp-finality-grandpa = '3.0.0'
sc-client-api = '3.0.0'
sp-runtime = '3.0.0'
sc-basic-authorship = '0.9.0'
sp-block-builder = '3.0.0'
sc-telemetry = '3.0.0'
ethereum = { version = "0.7.1", features = ["with-codec"] }


glitch-node-runtime = { path = "../runtime", package="glitch-node-runtime", default-features = false, features = ["std"] }

fc-consensus = '1.0.0'
fp-consensus = '1.0.0'
fp-rpc = '1.0.0'
fc-rpc = '1.0.0'
fc-rpc-core = '1.0.0'

fc-db = '1.0.0'
fc-mapping-sync = '1.0.0'

[build-dependencies]
substrate-build-script-utils = '3.0.0'

[features]

