[package]
authors = ['TraceLabs']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'glitch-node'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
jsonrpc-core = "15.1.0"
jsonrpc-pubsub = "15.1.0"
ethereum-types = "0.11.0"
serde_json = "1"

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

sp-api = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-rpc = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-cli = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-executor = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-service = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-inherents = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-network = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-consensus = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-io = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-storage = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }

sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
ethereum = { version = "0.7.1", features = ["with-codec"] }


glitch-node-runtime = { path = "../runtime", package="glitch-node-runtime", default-features = false, features = ["std"] }

pallet-evm = '3.0.0'
pallet-ethereum = '1.0.0'

fc-consensus = '1.0.0'
fp-consensus = '1.0.0'
fp-rpc = '1.0.0'
fc-rpc = '1.0.0'
fc-rpc-core = '1.0.0'

fc-db = '1.0.0'
fc-mapping-sync = '1.0.0'

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }

[features]

