[package]
authors = ['TraceLabs']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'glitch-node'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'glitch-node'

[dependencies]

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
pallet-evm = { path = "../pallets/pallet-evm"  }
# pallet-ethereum = { git = "https://github.com/clover-network/frontier.git", tag = "v2.0.1-clover" }
# fc-rpc = { git = "https://github.com/clover-network/frontier.git", tag = "v2.0.1-clover", features = ["rpc_binary_search_estimate"] }
fp-rpc = { git = "https://github.com/clover-network/frontier.git", tag = "v2.0.1-clover" }
fc-consensus = { git = "https://github.com/clover-network/frontier.git", tag = "v2.0.1-clover" }
fp-consensus = { git = "https://github.com/clover-network/frontier.git", tag = "v2.0.1-clover" }
fc-db = { git = "https://github.com/clover-network/frontier.git", tag = "v2.0.1-clover" }
fc-rpc-core = { git = "https://github.com/clover-network/frontier.git", tag = "v2.0.1-clover" }
fc-mapping-sync = { git = "https://github.com/clover-network/frontier.git", tag = "v2.0.1-clover" }

futures = "0.3.4"
glitch-node-runtime = { path = "../runtime", package="glitch-node-runtime", default-features = false, features = ["std"] }
jsonrpc-core = "15.1.0"
jsonrpc-pubsub = "15.1.0"
log = "0.4.8"
pallet-contracts = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0", default-features = false }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
# pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
primitives = { package = 'glitch-primitives', path = '../primitives', version = '3.0.0'}
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-cli = { features = ["wasmtime"], optional = true, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-executor = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0", optional = true }
sc-network = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-rpc = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-service = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
serde_json = "1"
sp-api = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-consensus = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-inherents = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
structopt = { version = '0.3.8', optional = true }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
hex-literal = { version = '0.3.1' }
primitive-types = { version = "0.9", default-features = false, features = ["rlp", "byteorder"] }

# local dependencies
fc-rpc = { path = "../client/fc-rpc", features = ["rpc_binary_search_estimate"] }
pallet-ethereum = { path = "../pallets/pallet-ethereum"}
pallet-transaction-payment-rpc = { path = "../pallets/pallet-transaction-payment/rpc" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }

[features]
default = [ "cli" ]

cli = [
    "wasmi-errno",
    "sc-cli",
    "sc-finality-grandpa-warp-sync",
    "sc-service/db",
    "structopt",
]

wasmtime = [
    "sc-executor/wasmtime",
]

wasmi-errno = [
    "sc-executor/wasmi-errno",
]