[package]
name = "glitch-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.101", optional = true }
num-traits = { version = "0.2", default-features = false}
num-derive= { version = "0.2", default-features = false}
strum = "0.19.2"
strum_macros = "0.19.2"
int-enum = "0.4.0"
enum-iterator = "0.6.0"
sp-core = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false  }
sp-runtime = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false  }

[features]
default = ["std"]
std = [
	'num-traits/std',
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-core/std",
]
