[package]
authors = ['TraceLabs']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'glitch-node-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sha3 = { version = "0.8", default-features = false }
log = "0.4.8"
smallvec = "1.4"
evm-runtime = { version = "0.25.0", default-features = false }
primitives = { default-features = false, package = 'glitch-primitives', path = '../primitives', version = '2.0.0'}

frame-executive = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false }

# Frontier
pallet-ethereum = { version = "1.0.0", default-features = false }
pallet-evm = { version = "3.0.0", default-features = false }
pallet-evm-precompile-simple = { version = "1.0.0", default-features = false  }
fp-rpc = { version = "1.0.0", default-features = false }

# FRAME
pallet-babe = { version = "3.0.0", default-features = false }
pallet-balances = { version = "3.0.0", default-features = false }
pallet-grandpa = { version = "3.0.0", default-features = false }
pallet-multisig = { version= "3.0.0", default-features = false }
pallet-scheduler = { version = "3.0.0", default-features = false }
pallet-sudo = { version = "3.0.0", default-features = false }
pallet-timestamp = { version = "3.0.0", default-features = false }
pallet-transaction-payment = { version = "3.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false }
pallet-collective = { version = "3.0.0", default-features = false }
pallet-bounties = { version = "3.0.0", default-features = false }
pallet-treasury = { version = "3.0.0", default-features = false }
pallet-authority-discovery = { version = "3.0.0", default-features = false }
pallet-im-online = { version = "3.0.0", default-features = false }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false }
pallet-session = { version = "3.0.0", default-features = false, features = ["historical"] }
pallet-staking = { version = "3.0.0", default-features = false }
pallet-democracy = { version = "3.0.0", default-features = false }
pallet-elections-phragmen = { version = "3.0.0", default-features = false }
pallet-offences = { version = "3.0.0", default-features = false }
pallet-authorship = { version = "3.0.0", default-features = false }
pallet-membership = { version = "3.0.0", default-features = false }
pallet-indices = { version = "3.0.0", default-features = false }
pallet-staking-reward-curve = { version = "3.0.0", default-features = false }

# Primitives
sp-api = { version = "3.0.0", default-features = false }
sp-block-builder = { version = "3.0.0", default-features = false}
sp-consensus-babe = { version = "0.9.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-inherents = { version = "3.0.0", default-features = false}
sp-io = { version = "3.0.0", default-features = false }
sp-offchain = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-session = { version = "3.0.0", default-features = false }
sp-staking = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-transaction-pool = { version = "3.0.0", default-features = false }
sp-version = { version = "3.0.0", default-features = false }
sp-authority-discovery = { version = "3.0.0", default-features = false }

[build-dependencies]
substrate-wasm-builder = '4.0.0'

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	'primitives/std',

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",

	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-precompile-simple/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-multisig/std",
	"pallet-randomness-collective-flip/std",
	"pallet-scheduler/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-collective/std",
	"pallet-bounties/std",
	"pallet-treasury/std",
	'pallet-authority-discovery/std',
	'pallet-im-online/std',
	'pallet-offences/std',
	'pallet-staking/std',
	'pallet-session/std',
	'pallet-authorship/std',
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"pallet-membership/std",
	'pallet-indices/std',

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	'sp-authority-discovery/std',
]
