[package]
authors = ['TraceLabs']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'glitch-node-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sha3 = { version = "0.8", default-features = false }
log = "0.4.8"
smallvec = "1.4"
evm-runtime = { version = "0.25.0", default-features = false }
primitives = { default-features = false, package = 'glitch-primitives', path = '../primitives', version = '3.0.0'}

frame-executive = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }

# Frontier
pallet-evm = { path = "../pallets/pallet-evm", default-features = false }
pallet-evm-precompile-simple = { path = "../pallets/pallet-evm/precompile/simple", default-features = false }
pallet-ethereum = { path= "../pallets/pallet-ethereum", default-features  = false }
fp-rpc = { git = "https://github.com/clover-network/frontier.git", tag = "v2.0.1-clover", default-features = false }
evm = { git = "https://github.com/clover-network/evm.git", tag = "v0.27.1-clover", default-features = false, features = ["with-codec"] }

# Ink
pallet-contracts = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
pallet-contracts-rpc-runtime-api = { version = "0.8.0", default-features = false }

# FRAME
pallet-babe = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
# pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
# pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
#pallet-bounties = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
#pallet-treasury = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-authority-discovery = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false, features = ["historical"] }
#pallet-staking = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-indices = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
pallet-tips = { default-features = false, path = "../pallets/pallet-tips" }
pallet-utility = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }

# Primitives
sp-api = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false}
sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false}
sp-io = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }

#
evm-accounts = { path = "../modules/evm-accounts", default-features = false }
glitch-traits = { path = "../modules/traits", default-features = false }

# custom
pallet-revenue = { path = '../pallets/pallet-revenue', default-features = false, version = '3.0.0' }
pallet-revenue-fund = {path = '../pallets/pallet-revenue-fund', default-features = false, version = '1.0.0'}

# Local
pallet-staking = { path = "../pallets/pallet-staking", default-features = false }
pallet-treasury = { path = "../pallets/pallet-treasury", default-features = false }
pallet-bounties = { path = "../pallets/pallet-bounties", default-features = false }
pallet-fund = {path = "../pallets/pallet-fund", default-features = false}
pallet-transaction-payment = { path = "../pallets/pallet-transaction-payment", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { path = "../pallets/pallet-transaction-payment/rpc/runtime-api/", default-features = false }

[build-dependencies]
substrate-wasm-builder = '4.0.0'

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	'primitives/std',

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",

	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-precompile-simple/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-multisig/std",
	"pallet-randomness-collective-flip/std",
	"pallet-scheduler/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-collective/std",
	"pallet-bounties/std",
	"pallet-treasury/std",
	'pallet-authority-discovery/std',
	'pallet-im-online/std',
	'pallet-offences/std',
	'pallet-staking/std',
	'pallet-session/std',
	'pallet-authorship/std',
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"pallet-membership/std",
	'pallet-indices/std',
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
	"pallet-contracts/std",
	'pallet-tips/std',
	"pallet-utility/std",

	"sp-api/std",
	"sp-arithmetic/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	'sp-authority-discovery/std',

	"pallet-revenue/std",
	"evm-accounts/std",
#	"pallet-fund/std"
]
