[package]
name = "sc-authority-discovery"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate authority discovery."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
prost-build = "0.7"

[dependencies]
async-trait = "0.1"
codec = { package = "parity-scale-codec", default-features = false, version = "2.0.0" }
derive_more = "0.99.2"
either = "1.5.3"
futures = "0.3.9"
futures-timer = "3.0.1"
libp2p = { version = "0.34.0", default-features = false, features = ["kad"] }
log = "0.4.8"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0", version = "0.9.0"}
prost = "0.7"
rand = "0.7.2"
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-network = { version = "0.9.0", path = "../sc-network" }
serde_json = "1.0.41"
sp-authority-discovery = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-keystore = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }

[dev-dependencies]
quickcheck = "1.0.3"
sp-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-peerset = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test_utils/runtime/client" }
