[package]
name = "sc-chain-spec"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate chain configurations."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-chain-spec-derive = { version = "3.0.0", path = "./derive" }
impl-trait-for-tuples = "0.2.1"
sc-network = { version = "0.9.0", path = "../sc-network" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-chain-spec = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-telemetry = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
codec = { package = "parity-scale-codec", version = "2.0.0" }
sc-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-consensus-epochs = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-finality-grandpa = { version = "0.9.0", path = "../sc-finality-grandpa" }
