[package]
description = "A request-response protocol for handling grandpa warp sync requests"
name = "sc-finality-grandpa-warp-sync"
version = "0.8.0"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
publish = false
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-network = { version = "0.9.0", path = "../sc-network" }
sc-finality-grandpa = { version = "0.9.0", path = "../sc-finality-grandpa" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-service = { version = "0.9.0", path = "../sc-service" }
futures = "0.3.8"
log = "0.4.11"
derive_more = "0.99.11"
codec = { package = "parity-scale-codec", version = "2.0.0" }
prost = "0.7"
num-traits = "0.2.14"
parking_lot = "0.11.1"
