[package]
name = "sc-finality-grandpa"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Integration of the GRANDPA finality gadget into substrate."
documentation = "https://docs.rs/sc-finality-grandpa"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
derive_more = "0.99.2"
fork-tree = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
futures = "0.3.9"
futures-timer = "3.0.1"
log = "0.4.8"
parking_lot = "0.11.1"
rand = "0.7.2"
parity-scale-codec = { version = "2.0.0", features = ["derive"] }
sp-application-crypto = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-arithmetic = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-keystore = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-telemetry = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-keystore = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
serde_json = "1.0.41"
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-network = { version = "0.9.0", path = "../sc-network" }
sc-network-gossip = { version = "0.9.0", path = "../sc-network-gossip" }
sp-finality-grandpa = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0", version = "0.9.0"}
sc-block-builder = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
finality-grandpa = { version = "0.13.0", features = ["derive-codec"] }
pin-project = "1.0.4"
linked-hash-map = "0.5.2"

[dev-dependencies]
assert_matches = "1.3.0"
finality-grandpa = { version = "0.13.0", features = ["derive-codec", "test-helpers"] }
sc-network = { version = "0.9.0", path = "../sc-network" }
sc-network-test = { version = "0.8.0", path = "../sc-network/test" }
sp-keyring = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test_utils/runtime/client" }
sp-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-state-machine = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
tokio = { version = "0.2", features = ["rt-core"] }
tempfile = "3.1.0"
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
