[package]
name = "sc-informant"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate informant."
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ansi_term = "0.12.1"
futures = "0.3.9"
log = "0.4.8"
parity-util-mem = { version = "0.9.0", default-features = false, features = ["primitive-types"] }
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-network = { version = "0.9.0", path = "../sc-network" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
wasm-timer = "0.2"
